[metadata]
description-file = README.rst
long_description_content_type = text/x-rst
license-file = LICENSE.txt

classifier = Development Status :: 4 - Beta
             Intended Audience :: Developers
             Topic :: Software Development :: Libraries :: Python Modules
             License :: OSI Approved :: GNU General Public License v3 (GPLv3)
             Programming Language :: Python :: 3
             Programming Language :: Python :: 3.4
             Programming Language :: Python :: 3.5
             Programming Language :: Python :: 3.6'
             Programming Language :: Python :: 3.7